fix z-index issue

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -78,9 +78,7 @@ header {
 	width: 100vw;
 	background-color: #000000f2;
 
-	* {
-		z-index: 2;
-	}
+	z-index: 20;
 }
 
 .search-container {
